--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
 
             <div class="logo">
-                <img src="/IMG/Banner/YandexGoRublack.png" alt="logo">
+                <img src="./IMG/Banner/YandexGoRublack.png" alt="logo">
             </div>
 
             <div class="big-text">
@@ -53,24 +53,24 @@
             <div class="grid-block">
 
                 <div class="content">
-                    <img src="/IMG/Icons/f1.png">
+                    <img src="./IMG/Icons/f1.png">
                     <p>0 ₽ за старт в каждой поездке</p>
                 </div>
 
                 <div class="content">
-                    <img src="/IMG/Icons/f3.png">
+                    <img src="./IMG/Icons/f3.png">
                     <p>Бесплатная пауза 15 минут в поездке — например, чтобы зайти за кофе или передохнуть</p>
                 </div>
 
                 <div class="content">
-                    <img src="/IMG/Icons/f2.png">
+                    <img src="./IMG/Icons/f2.png">
                     <p>Катаетесь с друзьями? Бронируйте до трёх самокатов с аккаунта с абонементом — так у всех
                         будет бесплатный старт
                     </p>
                 </div>
 
                 <div class="content">
-                    <img src="/IMG/Icons/f4.png">
+                    <img src="./IMG/Icons/f4.png">
                     <p>Если самокат недостаточно заряжен или с ним неудобно переходить дорогу, замените по пути
                         на другой — это бесплатно
                     </p>
@@ -96,7 +96,7 @@
                     слушали хор Attaque de Panique
                 </span>
 
-                <img class="banner1" src="/IMG/Banner/banner1.png">
+                <img class="banner1" src="./IMG/Banner/banner1.png">
 
             </div>
 
@@ -105,16 +105,16 @@
         <div class="slider">
             <div class="list">
                 <div class="item">
-                    <img src="/IMG/Banner/01.png" alt="">
+                    <img src="./IMG/Banner/01.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="/IMG/Banner/2.png" alt="">
+                    <img src="./IMG/Banner/2.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="/IMG/Banner/3.png" alt="">
+                    <img src="./IMG/Banner/3.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="/IMG/Banner/4.png" alt="">
+                    <img src="./IMG/Banner/4.png" alt="">
                 </div>
             </div>
 
@@ -143,9 +143,9 @@
                     </span>
                 </div>
 
-                <div class="f5"><img src="/IMG/Icons/f5.png"></div>
+                <div class="f5"><img src="./IMG/Icons/f5.png"></div>
 
-                <div class="f6"><img src="/IMG/Icons/f6.png"></div>
+                <div class="f6"><img src="./IMG/Icons/f6.png"></div>
 
                 <div class="content-txt4">
 
